--- a/content/code.html
+++ b/content/code.html
@@ -1,5 +1,5 @@
 ---
-title: OpenPDI
+title: Code | OpenPDI
 slug: code
 layout: blank
 
@@ -28,7 +28,7 @@ js: [
                 <span class="lead">
                     OpenPDI provides <b>uniform</b> access to data
                     from hundreds of sources&mdash;standardizing across file formats,
-                    column naming, and value types.
+                    column names, and value types.
                 </span>
             </div>
         </div>
