--- a/content/explore.html
+++ b/content/explore.html
@@ -7,11 +7,10 @@ layout: blank
 <section class="height-80 flush-with-above">
     <div class="container">
         <div class="row justify-content-between align-items-center">
-            <div class="col-12 col-md-6 col-lg-7 mb-4">
+            <div class="col-12 col-md-6 col-lg-7">
                 <img alt="Image" src="/img/graphic-woman-writing.svg" class="w-100" />
             </div>
-            <!--end of col-->
-            <div class="col-12 col-md-6 col-lg-5 mb-4 text-center text-md-left">
+            <div class="col-12 col-md-6 col-lg-5 text-center text-md-left">
                 <h1 class="display-3">Coming soon ...</h1>
                 <h2 class="lead">
                     Explore various open datasets on police acitivity in the U.S.,
@@ -19,22 +18,6 @@ layout: blank
                     traffic stops.
                 </h2>
             </div>
-            <!--end of col-->
         </div>
-        <!--end of row-->
     </div>
-    <!--end of container-->
-</section>
-<!--end of section-->
-<section class="space-sm flush-with-above">
-    <div class="container">
-        <div class="row">
-            <div class="col text-center">
-                <span class="text-muted text-small">Made with ☕ in Portland</span>
-            </div>
-            <!--end of col-->
-        </div>
-        <!--end of row-->
-    </div>
-    <!--end of container-->
 </section>
